# plugins-adapter

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  ext-proc.yaml  filter.yaml  proto-build.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/skills/orchestrate:ci/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yaml  build.yml  ci.yaml  pr-verifier.yml  scorecard.yml  security-scans.yaml  self-assign.yml  stale.yaml
docs/: README.md  build.md  deployment.md  personas.md
docs/architecture/: README.md
nemo/pii_detect_config/: config.yml  rails.co
plugins/examples/: README.md
plugins/examples/context_forge/internal/regex_filter/: search_replace.py
plugins/examples/nemo/: README.md  nemo_wrapper_plugin.py  requirements.txt
plugins/examples/nemocheck/: MANIFEST.in  Makefile  README.md  __init__.py  config.yaml  plugin-manifest.yaml  plugin.py  pyproject.toml
plugins/examples/nemocheck-internal/: README.md  config.yaml  plugin-manifest.yaml  plugin.py
plugins/examples/nemocheck/k8deploy/: Makefile  config-tools.yaml  deploy.yaml  server.yaml
plugins/examples/nemocheck/nemocheck/: plugin-manifest.yaml  plugin.py
plugins/examples/nemocheck/resources/plugins/: config.yaml
plugins/examples/nemocheck/tests/: __init__.py  pytest.ini  test_all.py  test_nemocheck.py
plugins/examples/nemocheck_external/: Containerfile  Makefile  README.md  pyproject.toml
plugins/examples/nemocheck_external/k8deploy/: deploy.yaml
plugins/examples/nemocheck_external/resources/plugins/: config.yaml
plugins/examples/nemocheckinternal/: README.md  __init__.py  config.yaml  plugin-manifest.yaml  plugin.py
plugins/nemo/: nemo_wrapper_plugin.py  plugin-manifest.yaml
plugins/nemo/pii_detect_config/: actions.py  rails.co
resources/config/: config.yaml  default_config.yaml  external_plugin_config.yaml  external_plugin_nemocheck.yaml  nemocheck-internal-config.yaml
scripts/hooks/: commit-msg
src/: server.py
tests/: conftest.py  pytest.ini  single-server-filter.yaml  test_graceful_shutdown.py  test_helpers.py  test_prompt_pre_fetch.py  test_server.py  test_tool_post_invoke.py  test_tool_pre_invoke.py
tests/integration/: config.yaml  conftest.py  test_ext_proc_e2e.py
tests/integration/passthrough_plugin/: plugin.py
